--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -246,7 +246,7 @@ input, select, textarea {
 		transform: translate3d(0,0,0);
 	/* Set your background with this */
 
-		background: #999999 url("images/project.jpg") bottom left;
+		background: #999999 url("images/image.jpg") bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
