--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -232,10 +232,10 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-		-moz-animation: bg 360s linear infinite;
+		/*-moz-animation: bg 360s linear infinite;
 		-webkit-animation: bg 360s linear infinite;
 		-ms-animation: bg 360s linear infinite;
-		animation: bg 360s linear infinite;
+		animation: bg 360s linear infinite;*/
 		-moz-backface-visibility: hidden;
 		-webkit-backface-visibility: hidden;
 		-ms-backface-visibility: hidden;
